--- a/src/main/resources/View/InputMenu.fxml
+++ b/src/main/resources/View/InputMenu.fxml
@@ -6,20 +6,19 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="300.0" style="-fx-background-color: lightpink;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.InputMenuController">
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0">
+      <VBox fx:id="fctContainer1">
          <children>
             <HBox>
                <children>
                   <TextField fx:id="fctInput1" onAction="#onFctSubmit" HBox.hgrow="ALWAYS" />
-                  <Label onMouseClicked="#onFctSubmit" text="Label" />
+                  <Label fx:id="fctLabel1" onMouseClicked="#onFctSubmit" text="Label" />
                </children>
             </HBox>
             <CheckBox mnemonicParsing="false" text="Show derivative" />
          </children>
       </VBox>
-      <VBox prefHeight="200.0" prefWidth="100.0" />
+      <VBox fx:id="fctContainer2" prefHeight="200.0" prefWidth="100.0" />
    </children>
 </VBox>
