--- a/src/main/resources/View/InputMenu.fxml
+++ b/src/main/resources/View/InputMenu.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="300.0" style="-fx-background-color: lightpink;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.InputMenuController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="300.0" style="-fx-background-color: lightpink;" stylesheets="@../styles/inputMenu.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.InputMenuController">
    <children>
       <VBox fx:id="fctContainer1">
          <children>
@@ -19,6 +21,21 @@
             <CheckBox mnemonicParsing="false" text="Show derivative" />
          </children>
       </VBox>
-      <VBox fx:id="fctContainer2" prefHeight="200.0" prefWidth="100.0" />
+      <VBox fx:id="fctContainer2">
+         <children>
+            <HBox>
+               <children>
+                  <TextField fx:id="fctInput2" onAction="#onFctSubmit" HBox.hgrow="ALWAYS" />
+                  <Label fx:id="fctLabel2" onMouseClicked="#onFctSubmit" text="Label" />
+               </children>
+            </HBox>
+            <CheckBox mnemonicParsing="false" text="Show derivative" />
+         </children>
+      </VBox>
+      <Pane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+      <VBox fx:id="keyboard" alignment="BOTTOM_CENTER" prefHeight="400.0" styleClass="keyboard" />
    </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </VBox>
