--- a/src/main/resources/View/mainView.fxml
+++ b/src/main/resources/View/mainView.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
@@ -12,5 +14,9 @@
         <Canvas fx:id="FunctionCanvas1" height="600.0" layoutX="10.0" layoutY="10.0" width="600.0" />
         <Canvas fx:id="FunctionCanvas2" height="600.0" layoutX="10.0" layoutY="10.0" width="600.0" />
     </StackPane>
-    <HBox layoutX="300.0" prefHeight="100.0" prefWidth="600.0" style="-fx-background-color: lightblue;" />
+    <HBox layoutX="300.0" prefHeight="100.0" prefWidth="600.0" style="-fx-background-color: lightblue;">
+      <children>
+         <Button fx:id="showInterceptsBtn" mnemonicParsing="false" onAction="#handleShowIntercepts" text="Show Intercepts" />
+         <Label fx:id="showInterceptsLabel" text="Label" />
+      </children></HBox>
 </AnchorPane>
