--- a/src/main/resources/View/mainView.fxml
+++ b/src/main/resources/View/mainView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 
-<AnchorPane maxHeight="700" minHeight="700" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.PrimaryController">
+<AnchorPane maxHeight="700" minHeight="700" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.PrimaryController">
     <fx:include source="InputMenu.fxml" />
     <StackPane fx:id="graphPane" layoutX="300.0" layoutY="100.0" onMouseDragged="#handleMouseDrag" onMousePressed="#handleMousePress" onScroll="#handleMouseScroll" prefHeight="600.0" prefWidth="600.0">
         <Canvas fx:id="AxesCanvas" height="600.0" width="600.0" />
@@ -15,6 +15,7 @@
         <Canvas fx:id="FunctionCanvas2" height="600.0" layoutX="10.0" layoutY="10.0" width="600.0" />
       <Canvas fx:id="Derivative1Canvas" height="600.0" layoutX="10.0" layoutY="10.0" width="600.0" />
       <Canvas fx:id="Derivative2Canvas" height="600.0" layoutX="10.0" layoutY="10.0" width="600.0" />
+      <Canvas fx:id="RootCanvas" height="600.0" layoutX="10.0" layoutY="10.0" width="600.0" />
     </StackPane>
     <HBox layoutX="300.0" prefHeight="100.0" prefWidth="600.0" style="-fx-background-color: lightblue;">
       <children>
