--- a/src/main/resources/View/mainView.fxml
+++ b/src/main/resources/View/mainView.fxml
@@ -6,8 +6,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="700" minHeight="700" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.PrimaryController">
+<AnchorPane fx:id="root" maxHeight="700" minHeight="700" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.PrimaryController">
     <fx:include source="InputMenu.fxml" />
     <StackPane fx:id="graphPane" layoutX="300.0" layoutY="100.0" onMouseDragged="#handleMouseDrag" onMousePressed="#handleMousePress" onScroll="#handleMouseScroll" prefHeight="600.0" prefWidth="600.0">
         <Canvas fx:id="AxesCanvas" height="600.0" width="600.0" />
@@ -17,9 +19,15 @@
       <Canvas fx:id="Derivative2Canvas" height="600.0" layoutX="10.0" layoutY="10.0" width="600.0" />
       <Canvas fx:id="RootCanvas" height="600.0" layoutX="10.0" layoutY="10.0" width="600.0" />
     </StackPane>
-    <HBox layoutX="300.0" prefHeight="100.0" prefWidth="600.0" style="-fx-background-color: lightblue;">
+   <VBox alignment="CENTER" layoutX="300.0" prefHeight="100.0" prefWidth="600.0" style="-fx-border-width: 1 1 1 0; -fx-border-color: black;">
       <children>
-         <Button fx:id="showInterceptsBtn" mnemonicParsing="false" onAction="#handleShowIntercepts" text="Show Intercepts" />
-         <Label fx:id="showInterceptsLabel" text="Label" />
-      </children></HBox>
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 36px;" text="Easy Grapher" />
+          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="600.0" spacing="10.0">
+            <children>
+               <Button fx:id="showInterceptsBtn" mnemonicParsing="false" onAction="#handleShowIntercepts" text="Show Intercepts" />
+               <Label fx:id="showInterceptsLabel" />
+            </children>
+         </HBox>
+      </children>
+   </VBox>
 </AnchorPane>
